0.5
---
  Request builder process to stop if file /tmp/bioshadocker-builder.stop is present

0.4
---
  Fixes and debug logs

0.3
---
  Implement schema.org in web pages
  Add auto tests at Docker build
  Add CoreOS Clair integration

0.2
---
  Add docker-squash on auto builds
  Extract metadata from Dockerfile labels
  UI/UX updates
  Support Markdown in description

0.1
---
  Modify build management to see progress
  Manage elixir setup

0.0
---

-  Initial version